--- a/template/index_template.html
+++ b/template/index_template.html
@@ -74,15 +74,9 @@
           <div class="col-lg-12">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              
-                <li data-filter=.filter-app>Alice</li>
-              
-                <li data-filter=.filter-card>Bob</li>
-              
-                <li data-filter=.filter-web>Charlie</li>
-              
-                <li data-filter=>Alice</li>
-              
+              {% for user in task_user %}
+                <li data-filter={{data_filter[loop.index0]}}>{{user.alias}}</li>
+              {% endfor %}
               
               <!-- <li data-filter=".filter-app"></li> -->
               <li data-filter=".filter-card">Card</li>
