--- a/template/index_template.html
+++ b/template/index_template.html
@@ -88,8 +88,11 @@
           {% for user in task_user %}
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
+                {% set min_value = 1 %}
+                {% set max_value = 9 %}
+                {% set random_number = range(min_value, max_value)|random %}
+                <img src="assets/img/portfolio/portfolio-{random_number}.jpg" class="img-fluid" alt="">
+                <div class="portfolio-links">
                   <h4>{{user.name}}</h4>
                 </div>
               </div>
