added render for card

--- a/template/index_template.html
+++ b/template/index_template.html
@@ -94,6 +94,7 @@
                 <img src="assets/img/portfolio/portfolio-{random_number}.jpg" class="img-fluid" alt="">
                 <div class="portfolio-links">
                   <h4>{{user.name}}</h4>
+                  <h4>test</h4>
                 </div>
               </div>
             </div>
