added render for card

--- a/template/index_template.html
+++ b/template/index_template.html
@@ -91,7 +91,7 @@
                 {% set min_value = 1 %}
                 {% set max_value = 9 %}
                 {% set random_number = range(min_value, max_value)|random %}
-                <img src="assets/img/portfolio/portfolio-{random_number}.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/portfolio-{{random_number}}.jpg" class="img-fluid" alt="">
                 <div class="portfolio-links">
                   <h4>{{user.name}}</h4>
                 </div>
