--- a/template/index_template.html
+++ b/template/index_template.html
@@ -86,7 +86,8 @@
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
           {% for user in task_user %}
-            <div class="col-lg-4 col-md-6 portfolio-item {{user.data_filter}}">
+          
+            <div class="col-lg-4 col-md-6 portfolio-item {{user.data_filter|replace('.', '')}}">
               <div class="portfolio-wrap">
                 {% set min_value = 1 %}
                 {% set max_value = 9 %}
