--- a/template/index_template.html
+++ b/template/index_template.html
@@ -98,6 +98,8 @@
                 <img src="assets/img/portfolio/portfolio-{{random_number}}.jpg" class="img-fluid" alt="">
                 <div class="portfolio-links">
                   <h4>{{user.name}}</h4>
+                  <a href="http://localhost:5000/Modify" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Modify"><i class="bi bi-plus"></i></a>
+                  <a href="http://localhost:5000/Delete" title="Delete"><i class="bi bi-file-excel"></i></a>
                 </div>
               </div>
             </div>
@@ -108,7 +110,7 @@
               <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bi bi-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+                <a href="portfolio-details.html" title="More Details"><i class="bi bi-file-excel"></i></a>
               </div>
               <div class="portfolio-info">
                 <h4>Web 3</h4>
