--- a/template/index_template.html
+++ b/template/index_template.html
@@ -98,8 +98,26 @@
                 <img src="assets/img/portfolio/portfolio-{{random_number}}.jpg" class="img-fluid" alt="">
                 <div class="portfolio-links">
                   <h4>{{user.name}}</h4>
-                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="bi bi-plus"></i></button>
-
+                  <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="bi bi-plus"></i></button> -->
+                  <a href="http://localhost:5000/Modify" data-bs-toggle="modal" data-bs-target="#exampleModal" title="Modify"><i class="bi bi-plus"></i></a>
+                  <!-- Modal -->
+                  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                          ...
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                          <button type="button" class="btn btn-primary">Save changes</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                   <!-- <a href="http://localhost:5000/Modify" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Modify"><i class="bi bi-plus"></i></a> -->
                   <a href="http://localhost:5000/Delete" title="Delete"><i class="bi bi-file-excel"></i></a>
                 </div>
