added render for card

--- a/template/index_template.html
+++ b/template/index_template.html
@@ -99,7 +99,7 @@
                 <div class="portfolio-links">
                   <h4>{{user.name}}</h4>
                   <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="bi bi-plus"></i></button> -->
-                  <a href="http://localhost:5000/Modify" data-bs-toggle="modal" data-bs-target="#exampleModal" title="Modify"></a>
+                  <a href="http://localhost:5000/Modify" title="Modify"></a>
                   <!-- Modal -->
                   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
