added render for card

--- a/template/index_template.html
+++ b/template/index_template.html
@@ -162,7 +162,7 @@
   <script src="assets/js/main.js"></script>
 
   <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -178,7 +178,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </body>
 
 </html>
