added render for card

--- a/template/index_template.html
+++ b/template/index_template.html
@@ -99,8 +99,8 @@
                 <div class="portfolio-links">
                   <h4>{{user.name}}</h4>
                   <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="bi bi-plus"></i></button> -->
-                  <a href="http://localhost:5000/Modify" title="Modify"></a>
-                  
+                  <!-- <a href="http://localhost:5000/Modify" title="Modify"></a> -->
+                  <a href="http://localhost:5000/Modify" data-bs-toggle="modal" data-bs-target="#exampleModal" title="Modify"><i class="bi bi-plus"></i></a>
                   <!-- <a href="http://localhost:5000/Modify" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Modify"><i class="bi bi-plus"></i></a> -->
                   <a href="http://localhost:5000/Delete" title="Delete"><i class="bi bi-file-excel"></i></a>
                 </div>
