--- a/template/index_template.html
+++ b/template/index_template.html
@@ -98,8 +98,9 @@
                 <img src="assets/img/portfolio/portfolio-{{random_number}}.jpg" class="img-fluid" alt="">
                 <div class="portfolio-links">
                   <h4>{{user.name}}</h4>
-                  <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="bi bi-plus"></i></button> -->
+                  <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="{{user.name}}><i class="bi bi-plus"></i></button> -->
                   <!-- <a href="http://localhost:5000/Modify" title="Modify"></a> -->
+                  
                   <a href="http://localhost:5000/Modify" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="{{user.name}}" title="Modify"><i class="bi bi-plus"></i></a>
                   <!-- <a href="http://localhost:5000/Modify" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Modify"><i class="bi bi-plus"></i></a> -->
                   <a href="http://localhost:5000/Delete" title="Delete"><i class="bi bi-file-excel"></i></a>
@@ -150,17 +151,6 @@
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-
-  <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
-
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -174,16 +164,29 @@
             <div class="mb-3">
               <label for="task-name" class="col-form-label">New task name:</label>
               <input type="text" class="form-control" id="task-name">
+              <input type="hidden" class="form-control" id="old_task-name" value="">
             </div>
           </form>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Modify task</button>
+          <button id="postButton" type="button" class="btn btn-primary">Modify task</button>
         </div>
       </div>
     </div>
   </div>
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
+
 </body>
 
 </html>
