--- a/template/src/index_template.html
+++ b/template/src/index_template.html
@@ -57,11 +57,11 @@
           {% for user in task_user %}
             {% if user.alias not in account_list %}
             {% set _ = account_list.append(user.alias) %}
-              <li><a class="dropdown-item" href="http://localhost:5000/Account?alias={{user.alias}}">{{user.alias}}</a></li>
+              <li><a class="dropdown-item GetAccount" ahref="#" data-value="{{user.alias}}">{{user.alias}}</a></li>
             {% endif %}
           {% endfor %}
           <li><hr class="dropdown-divider"></li>
-          <li><a class="dropdown-item" href="#">Create your own account</a></li>
+          <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#CreateModal">Create your own account (WORK IN PROGRESS)</a></li>
         </ul>
       </div>
 
@@ -113,29 +113,15 @@
                   {% if user.alias == account %}
                   <a href="http://localhost:5000/Modify?alias={{account}}&task={{user.name}}" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="{{user.name}}" title="Modify"><i class="bi bi-arrow-up-short"></i></a>
                   <!-- <a href="http://localhost:5000/Modify" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Modify"><i class="bi bi-plus"></i></a> -->
-                  <a href="http://localhost:5000/Delete?alias={{account}}&task={{user.name}}" title="Delete"><i class="bi bi-x"></i></a>
+                  <a class="DeleteTask"  data-value="alias={{account}}&task={{user.name}}" href="#" title="Delete"><i class="bi bi-x"></i></a>
                   {% else %}
                   <a href="http://localhost:5000/Modify?alias=chooseaccount&task=chooseaccount" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="{{user.name}}" title="Modify"><i class="bi bi-arrow-up-short"></i></a>
-                  <a href="http://localhost:5000/Delete?alias=chooseaccount&task=chooseaccount" title="Delete"><i class="bi bi-x"></i></a>
+                  <a class="DeleteTask" data-value="alias=chooseaccount&task=chooseaccount" href="#" title="Delete"><i class="bi bi-x"></i></a>
                   {% endif %}
                 </div>
               </div>
             </div>
           {% endfor %}
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bi bi-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bi bi-file-excel"></i></a>
-              </div>
-              <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
-              </div>
-            </div>
-          </div>
 
         </div>
 
@@ -185,6 +171,30 @@
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
           <button id="postButton" type="button" class="btn btn-primary">Modify task</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Create account Modal -->
+  <div class="modal fade" id="AccountModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="AccountModalLabel">Create account</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="mb-3">
+              <label for="alias" class="col-form-label">New alias:</label>
+              <input type="text" class="form-control" id="alias">
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button id="postAccountButton" type="button" class="btn btn-primary">Create account</button>
         </div>
       </div>
     </div>
